--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "module": "commonjs",
     "outDir": "./out-tsc/spec",
-    "types": ["jest"]
+    "types": ["jest"],
+    "emitDecoratorMetadata": true,
   },
   "files": [
     "src/polyfills.ts"
